# colory-pprint

./: Pipfile  README.md  __init__.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
colory_pprint.egg-info/: PKG-INFO
tests/: test_logger.py
