[metadata]
name = logger-utils
version = 1.0.0
author = Ruhiddin
author_email = your-email@example.com
description = An advanced color-coded JSON logger for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/logger-utils
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    termcolor
python_requires = >=3.6
